fix: no more sidebar gap with minified sidebar

--- a/css/content.css
+++ b/css/content.css
@@ -150,6 +150,7 @@
 .bettercanvas-reminder-due {font-size:12px!important;margin:0!important;margin-top:5px!important;line-height:12px!important;color:#676767!important;}
 .bettercanvas-reminder-hide {color:#000!important;padding: 0px!important; font-size:14px!important;height:22px!important;min-width:22px!important;width:22px!important;margin: 10px!important;border-radius:6px!important;cursor:pointer;display:flex!important;align-self:stretch!important;align-items:center!important;justify-content:center!important;align-items:center!important;background: #e9e9e9!important;}
 .bettercanvas-reminder-content {text-decoration:none!important;}
+.bettercanvas-sidebar-enabled.bettercanvas-sidebar-small #nav-tray-portal .transition--slide-left-entered {margin-left: 68px !important;}
 @keyframes slide {
     0% {
         right: -320px;
